# i3auto-ws-icons-rust

./: Cargo.toml  README.md  build.rs  rustfmt.toml
examples/: config.toml
src/: i3_node.rs  main.rs  util.rs
src/models/: config.rs  font_awesome.rs  i3_info.rs  i3_node.rs  i3_window.rs  mod.rs  name_parts.rs
src/util/: util.rs
