[package]
name = "i3auto-ws-icons-rs"
description = "i3auto-ws-icons-rs listens for i3 events and updates workspace names to show icons for running programs"
repository = "https://github.com/madhur/i3-auto-workspace-icons-rust"
readme = "README.md"
version = "0.1.1"
authors = ["Madhur Ahuja <ahuja.madhur@gmail.com>"]
edition = "2021"

[dependencies]
swayipc = "3.0.1"
xcb = "0.10"
dirs-next = "2.0" 
toml = "0.5"
regex = "1"
serde_derive = "1.0.147"
xproto = "2.0.1"
rust-embed="6.4.2"

[dependencies.clap]
version = "3.0"
default-features = false
features = ["std", "derive"]

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

